--- a/data/cards/11136371.yaml
+++ b/data/cards/11136371.yaml
@@ -19,9 +19,9 @@ text:
   de: |-
     Lege alle Karten in deiner Zauber- & Fallenzone auf den Friedhof. Lege so viele „Kristallungeheuer“-Monster wie möglich von deinem Friedhof offen als Permanente Zauber in deine Zauber- & Fallenzone. Während der End Phase dieses Spielzugs, zerstöre alle „Kristallungeheuer“-Karten, die du kontrollierst.
   es: |-
-    Manda al Cementerio todas las cartas en tu Zona de Magia y Trampas. Pon boca arriba en tu Zona de Magia y Trampas tantos monstruos "Bestia de Cristal" en tu Cementerio como sea posible, como si fueran Mágicas Continuas. Durante la End Phase de este turno, destruye todas las cartas "Bestia de Cristal" que controles.
+    Manda al Cementerio todas las cartas en tu Zona de Magia y Trampas. Pon boca arriba en tu Zona de Magia y Trampas tantos monstruos "Bestia de Cristal" en tu Cementerio como sea posible, como Mágicas Continuas. Durante la End Phase de este turno, destruye todas las cartas "Bestia de Cristal" que controles.
   fr: |-
-    Envoyez au Cimetière toutes les cartes dans votre Zone Magie & Piège. Placez autant de monstres "Bête Cristalline" que possible depuis votre Cimetière, face recto dans votre Zone Magie & Piège comme Magies Continues. Durant la End Phase de ce tour, détruisez toutes les cartes "Bête Cristalline" que vous contrôlez.
+    Envoyez toutes les cartes dans votre Zone Magie & Piège au Cimetière. Placez autant de monstres "Bête Cristalline" que possible depuis votre Cimetière, face recto dans votre Zone Magie & Piège comme Magies Continues. Durant la End Phase de ce tour, détruisez toutes les cartes "Bête Cristalline" que vous contrôlez.
   it: |-
     Manda al Cimitero tutte le carte nella tua Zona Magie & Trappole. Metti tanti mostri "Bestia Cristallo" quanti possibile dal tuo Cimitero scoperti nella tua Zona Magie & Trappole, come Magie Continue. Durante la End Phase di questo turno, distruggi tutte le carte "Bestia Cristallo" che controlli.
   pt: |-
