--- a/data/cards/35486099.yaml
+++ b/data/cards/35486099.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Target up to 2 "Crystal Beast" monsters in your GY; place those targets face-up in your Spell & Trap Zone as Continuous Spells.
   de: |-
-    Wähle bis zu 2 „Kristallungeheuer“-Monster in deinem Friedhof; lege die gewählten Ziele offen als Permanente Zauber in deine Zauber- & Fallenzone.
+    Wähle bis zu 2 „Kristallungeheuer“-Monster in deinem Friedhof; lege jene gewählten Ziele offen als Permanente Zauber in deine Zauber- & Fallenzone.
   es: |-
     Selecciona hasta 2 monstruos "Bestia de Cristal" en tu Cementerio; pon esos objetivos boca arriba en tu Zona de Magia y Trampas como Mágicas Continuas.
   fr: |-
