--- a/data/cards/40854824.yaml
+++ b/data/cards/40854824.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Falls der Effekt von einem oder mehr Monstern, die du kontrollierst und deren Grund-Name „Regenbogendrache“ oder „Regenbogenfinsternisdrache“ ist, in diesem Spielzug aktiviert wurde: Beschwöre eine beliebige Anzahl „Kristallungeheuer“-Monster mit unterschiedlichen Namen als Spezialbeschwörung von deinem Deck.
   es: |-
-    Si uno o más monstruos que tú controlas cuyo nombre original es "Dragón Arco Iris" o "Dragón Arco Iris Oscuro" activaron su efecto este turno: Invoca de Modo Especial, desde tu Deck, cualquier cantidad de monstruos "Bestia de Cristal" con nombres diferentes.
+    Si uno o más monstruos que controlas cuyo nombre original sea "Dragón Arco Iris" o "Dragón Arco Iris Oscuro" activaron su efecto este turno: Invoca de Modo Especial, desde tu Deck, cualquier número de monstruos "Bestia de Cristal" con nombres diferentes.
   fr: |-
     Si un ou plusieurs monstres que vous contrôlez dont le nom d'origine est "Dragon Arc-en-Ciel" ou "Dragon Arc-en-Ciel des Ténèbres" ont activé leur effet ce tour : Invoquez Spécialement un nombre de votre choix de monstres "Bête Cristalline" de noms différents depuis votre Deck.
   it: |-
