--- a/data/cards/47121070.yaml
+++ b/data/cards/47121070.yaml
@@ -17,13 +17,13 @@ text:
   en: |-
     When a "Crystal Beast" monster you control is destroyed by battle and sent to the GY: Place 1 "Crystal Beast" monster from your Deck face-up in your Spell & Trap Zone as a Continuous Spell, and if you do, you take no battle damage for the rest of this turn.
   de: |-
-    Wenn ein „Kristallungeheuer“-Monster, das du kontrollierst, durch Kampf zerstört und auf den Friedhof gelegt wird: Lege 1 „Kristallungeheuer“-Monster von deinem Deck als Permanente Zauberkarte offen in deine Zauber- & Fallenkartenzone, dann erhältst du für den Rest dieses Spielzugs keinen Kampfschaden.
+    Wenn ein „Kristallungeheuer“-Monster, das du kontrollierst, durch Kampf zerstört und auf den Friedhof gelegt wird: Lege 1 „Kristallungeheuer“-Monster von deinem Deck offen als Permanenten Zauber in deine Zauber- & Fallenzone und falls du dies tust, erhältst du für den Rest dieses Spielzugs keinen Kampfschaden.
   es: |-
-    Sólo puedes activar esta carta cuando un monstruo "Bestia de Cristal" que controles es destruido en batalla y mandado al Cementerio. Coloca 1 monstruo "Bestia de Cristal" desde tu Deck en tu Zona de Cartas Mágicas y de Trampa, boca arriba, como una Carta Mágica Continua. No recibes daño de batalla este turno.
+    Cuando un monstruo "Bestia de Cristal" que controles es destruido en batalla y mandado al Cementerio: pon en tu Zona de Magia y Trampas 1 monstruo "Bestia de Cristal" en tu Deck, boca arriba como una Mágica Continua y, si lo haces, no recibes daño de batalla por el resto de este turno.
   fr: |-
-    Activable uniquement lorsqu'un monstre "Bête Cristalline" que vous contrôlez est détruit au combat et envoyé au Cimetière. Mettez 1 monstre "Bête Cristalline" de votre Deck dans votre Zone Carte Magie & Piège, face recto, en tant que Carte Magie Continue. Vous ne prenez pas de dommages de combat ce tour.
+    Lorsqu'un monstre "Bête Cristalline" que vous contrôlez est détruit au combat et envoyé au Cimetière : placez 1 monstre "Bête Cristalline" depuis votre Deck face recto dans votre Zone Magie & Piège comme Magie Continue, et si vous le faites, vous ne recevez aucun dommage de combat le reste de ce tour.
   it: |-
-    Quando un mostro "Bestia Cristallo" che controlli viene distrutto in battaglia e mandato al Cimitero: metti 1 mostro "Bestia Cristallo" dal tuo Deck nella tua Zona Carte Magia & Trappola scoperto come una Carta Magia Continua, poi non subisci danno da combattimento per il resto di questo turno.
+    Quando un mostro "Bestia Cristallo" che controlli viene distrutto in battaglia e mandato al Cimitero: metti 1 mostro "Bestia Cristallo" dal tuo Deck nella tua Zona Magie & Trappole scoperto come una Magia Continua e, se lo fai, non subisci danno da combattimento per il resto di questo turno.
   pt: |-
     Quando um monstro "Fera Cristalina" que você controla for destruído em batalha e enviado para o Cemitério: coloque 1 monstro "Fera Cristalina" do seu Deck com a face para cima na sua Zona de Magias & Armadilhas como uma Magia Contínua e, se isso acontecer, você não sofre dano de batalha pelo resto deste turno.
   ja: |-
