--- a/data/cards/48800175.yaml
+++ b/data/cards/48800175.yaml
@@ -19,11 +19,11 @@ text:
   de: |-
     Wirf 1 Karte ab; füge deiner Hand bis zu 2 Drache-Monster mit 3000 oder mehr ATK und 2500 oder weniger DEF von deinem Deck hinzu.
   es: |-
-    Descarta 1 carta; añade a tu mano hasta 2 monstruos Dragón con 3000 ATK o más, y 2500 DEF o menos en tu Deck.
+    Descarta 1 carta; añade a tu mano hasta 2 monstruos Dragón en tu Deck con 3000 ATK o más y 2500 DEF o menos.
   fr: |-
     Défaussez 1 carte ; ajoutez max. 2 monstres Dragon avec min. 3000 ATK et max. 2500 DEF depuis votre Deck à votre main.
   it: |-
-    Scarta 1 carta; aggiungi fino a 2 mostri Drago con ATK di 3000 o superiore e DEF di 2500 o inferiore dal tuo Deck alla tua mano.
+    Scarta 1 carta; aggiungi fino a 2 mostri Drago con ATK 3000 o superiore e DEF 2500 o inferiore dal tuo Deck alla tua mano.
   pt: |-
     Descarte 1 card; adicione até 2 monstros Dragão com 3000 ou mais de ATK e 2500 ou menos de DEF do seu Deck à sua mão.
   ja: |-
