--- a/data/cards/69937550.yaml
+++ b/data/cards/69937550.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Wenn ein anderes „Kristallungeheuer“-Monster, das du kontrollierst, als Ziel für einen Angriff gewählt wird: Du kannst das Angriffsziel auf diese Karte ändern. Falls diese offene Karte in einer Monsterzone zerstört wird, kannst du sie offen als Permanenten Zauber in deine Zauber- & Fallenzone legen, anstatt sie auf den Friedhof zu legen.
   es: |-
-    Cuando otro monstruo "Bestia de Cristal" que controlas es seleccionado para un ataque: puedes cambiar el objetivo del ataque a esta carta. Si esta carta boca arriba es destruida en una Zona de Monstruos, puedes, en vez de mandarla al Cementerio, ponerla boca arriba en tu Zona de Magia y Trampas como una Mágica Continua.
+    Cuando otro monstruo "Bestia de Cristal" que controles es seleccionado para un ataque: puedes cambiar el objetivo del ataque a esta carta. Si esta carta boca arriba es destruida en una Zona de Monstruos, puedes ponerla boca arriba en tu Zona de Magia y Trampas como una Mágica Continua en lugar de mandarla al Cementerio.
   fr: |-
     Lorsqu'un autre monstre "Bête Cristalline" que vous contrôlez est ciblé par une attaque : vous pouvez transférer la cible de l'attaque sur cette carte. Si cette carte face recto est détruite dans une Zone Monstre, vous pouvez la placer face recto dans votre Zone Magie & Piège comme Magie Continue au lieu de l'envoyer au Cimetière.
   it: |-
