--- a/data/cards/79407975.yaml
+++ b/data/cards/79407975.yaml
@@ -18,7 +18,7 @@ text:
     (This card is always treated as an "Ultimate Crystal" card.)
     Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand) by banishing 7 DARK monsters with different names from your GY. You can banish all other DARK monsters from your field and GY; this card gains 500 ATK for each card banished this way.
   de: |-
-    (Diese Karte wird immer als eine „Ultimativer Kristall“-Karte behandelt.)
+    (Diese Karte wird immer als „Ultimativer Kristall“-Karte behandelt.)
     Kann nicht als Normalbeschwörung beschworen/gesetzt werden. Muss als Spezialbeschwörung (von deiner Hand) beschworen werden, indem du 7 FINSTERNIS Monster mit unterschiedlichen Namen von deinem Friedhof verbannst. Du kannst alle anderen FINSTERNIS Monster von deiner Spielfeldseite und deinem Friedhof verbannen; diese Karte erhält für jede auf diese Art verbannte Karte 500 ATK.
   es: |-
     (Esta carta se trata siempre como una carta "Cristal Definitivo/a").
