--- a/data/cards/87475570.yaml
+++ b/data/cards/87475570.yaml
@@ -46,7 +46,7 @@ pendulum_effect:
   de: |-
     Dein Gegner kann weder „Ultimativer Kristall“-Monster noch „Kristallungeheuer“-Karten, die du kontrollierst, als Ziel für Karteneffekte wählen.
   es: |-
-    Tu adversario no puede seleccionar con efectos de cartas a monstruos "Cristal Definitivo/a" o cartas "Bestia de Cristal" que tú controles.
+    Tu adversario no puede seleccionar con efectos de cartas monstruos "Cristal Definitivo/a" o cartas "Bestia de Cristal" que controles.
   fr: |-
     Votre adversaire ne peut cibler ni les monstres "Cristal Ultime" ni les cartes "Bête Cristalline" que vous contrôlez avec des effets de carte.
   it: |-
