--- a/data/cards/07093411.yaml
+++ b/data/cards/07093411.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Wenn diese Karte beschworen wird: Du kannst 1 „Kristallungeheuer“-Monster von deiner Hand, deinem Deck oder deinem Friedhof offen als Permanenten Zauber in deine Zauber- & Fallenzone legen. Falls diese offene Karte in einer Monsterzone zerstört wird, kannst du sie offen als Permanenten Zauber in deine Zauber- & Fallenzone legen, anstatt sie auf den Friedhof zu legen.
   es: |-
-    Cuando esta carta es Invocada: puedes poner en tu Zona de Magia y Trampas 1 monstruo "Bestia de Cristal" en tu mano, Deck o Cementerio, boca arriba como si fuera una Mágica Continua. Si esta carta boca arriba es destruida en una Zona de Monstruos, puedes, en vez de mandarla al Cementerio, ponerla boca arriba en tu Zona de Magia y Trampas como una Mágica Continua.
+    Cuando esta carta es Invocada: puedes poner en tu Zona de Magia y Trampas 1 monstruo "Bestia de Cristal" en tu mano, Deck o Cementerio, boca arriba como una Mágica Continua. Si esta carta boca arriba es destruida en una Zona de Monstruos, puedes ponerla boca arriba en tu Zona de Magia y Trampas como una Mágica Continua en lugar de mandarla al Cementerio.
   fr: |-
     Lorsque cette carte est Invoquée : vous pouvez placer 1 monstre "Bête Cristalline" depuis votre main, Deck ou Cimetière, face recto dans votre Zone Magie & Piège comme Magie Continue. Si cette carte face recto est détruite dans une Zone Monstre, vous pouvez la placer face recto dans votre Zone Magie & Piège comme Magie Continue au lieu de l'envoyer au Cimetière.
   it: |-
