--- a/data/cards/08275702.yaml
+++ b/data/cards/08275702.yaml
@@ -17,9 +17,9 @@ text:
   en: |-
     Target 1 "Crystal Beast" card in your Spell & Trap Zone; Special Summon that target.
   de: |-
-    Wähle 1 „Kristallungeheuer“-Karte in deiner Zauber- & Fallenzone; beschwöre das gewählte Ziel als Spezialbeschwörung.
+    Wähle 1 „Kristallungeheuer“-Karte in deiner Zauber- & Fallenzone; beschwöre jenes gewählte Ziel als Spezialbeschwörung.
   es: |-
-    Selecciona 1 carta "Bestia de Cristal" en tu Zona de Magia y Trampas; Invoca de Modo Especial ese objetivo.
+    Selecciona 1 carta "Bestia de Cristal" en tu Zona de Magia y Trampas; Invoca ese objetivo de Modo Especial.
   fr: |-
     Ciblez 1 carte "Bête Cristalline" dans votre Zone Magie & Piège ; Invoquez Spécialement la cible.
   it: |-
