--- a/data/cards/09334391.yaml
+++ b/data/cards/09334391.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Füge deiner Hand 1 „Kristallungeheuer“-Monster von deinem Deck hinzu und lege 1 „Kristallungeheuer“-Monster mit einem unterschiedlichen Namen von deinem Deck offen als Permanenten Zauber in deine Zauber- & Fallenzone. Du kannst nur 1 „Kristallverbindung“ pro Spielzug aktivieren.
   es: |-
-    Añade a tu mano 1 monstruo "Bestia de Cristal" en tu Deck, y pon boca arriba en tu Zona de Magia y Trampas 1 monstruo "Bestia de Cristal" con un nombre diferente en tu Deck, como si fuera una Mágica Continua. Sólo puedes activar 1 "Conexión de Cristal" por turno.
+    Añade a tu mano 1 monstruo "Bestia de Cristal" en tu Deck, y pon boca arriba en tu Zona de Magia y Trampas 1 monstruo "Bestia de Cristal" en tu Deck con un nombre diferente, como una Mágica Continua. Sólo puedes activar 1 "Conexión de Cristal" por turno.
   fr: |-
     Ajoutez 1 monstre "Bête Cristalline" depuis votre Deck à votre main, et placez 1 monstre "Bête Cristalline" de nom différent depuis votre Deck face recto dans votre Zone Magie & Piège comme Magie Continue. Vous ne pouvez activer qu'1 "Lien Cristallin" par tour.
   it: |-
