--- a/data/cards/10004783.yaml
+++ b/data/cards/10004783.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Rüste nur ein „Kristallungeheuer“-Monster mit dieser Karte aus. Es erhält 800 ATK. Wenn diese Karte vom Spielfeld auf den Friedhof gelegt wird: Du kannst 1 „Kristallungeheuer“-Monster von deinem Deck offen als Permanenten Zauber in deine Zauber- & Fallenzone legen.
   es: |-
-    Sólo puedes equipar esta carta a un monstruo "Bestia de Cristal". Éste gana 800 ATK. Cuando esta carta es mandada del Campo al Cementerio: puedes poner boca arriba en tu Zona de Magia y Trampas 1 monstruo "Bestia de Cristal" en tu Deck, como si fuera una Mágica Continua.
+    Sólo puedes equipar esta carta a un monstruo "Bestia de Cristal". Éste gana 800 ATK. Cuando esta carta es mandada del Campo al Cementerio: puedes poner boca arriba en tu Zona de Magia y Trampas 1 monstruo "Bestia de Cristal" en tu Deck, como una Mágica Continua.
   fr: |-
     Équipable uniquement à un monstre "Bête Cristalline". Il gagne 800 ATK. Lorsque cette carte est envoyée depuis le Terrain au Cimetière : vous pouvez placer 1 monstre "Bête Cristalline" depuis votre Deck, face recto dans votre Zone Magie & Piège comme Magie Continue.
   it: |-
