--- a/data/cards/21698716.yaml
+++ b/data/cards/21698716.yaml
@@ -17,9 +17,9 @@ text:
   en: |-
     Once per turn: You can target 1 "Crystal Beast" card you control; place that target on top of the Deck. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
   de: |-
-    Einmal pro Spielzug: Du kannst 1 „Kristallungeheuer“-Karte wählen, die du kontrollierst; lege das gewählte Ziel aufs Deck. Falls diese offene Karte in einer Monsterzone zerstört wird, kannst du sie offen als Permanenten Zauber in deine Zauber- & Fallenzone legen, anstatt sie auf den Friedhof zu legen.
+    Einmal pro Spielzug: Du kannst 1 „Kristallungeheuer“-Karte wählen, die du kontrollierst; lege jenes gewählte Ziel aufs Deck. Falls diese offene Karte in einer Monsterzone zerstört wird, kannst du sie offen als Permanenten Zauber in deine Zauber- & Fallenzone legen, anstatt sie auf den Friedhof zu legen.
   es: |-
-    Una vez por turno: puedes seleccionar 1 carta "Bestia de Cristal" que controles; pon ese objetivo en la parte superior del Deck. Si esta carta boca arriba es destruida en una Zona de Monstruos, puedes, en vez de mandarla al Cementerio, ponerla boca arriba en tu Zona de Magia y Trampas como una Mágica Continua.
+    Una vez por turno: puedes seleccionar 1 carta "Bestia de Cristal" que controles; pon ese objetivo en la parte superior del Deck. Si esta carta boca arriba es destruida en una Zona de Monstruos, puedes ponerla boca arriba en tu Zona de Magia y Trampas como una Mágica Continua en lugar de mandarla al Cementerio.
   fr: |-
     Une fois par tour : vous pouvez cibler 1 carte "Bête Cristalline" que vous contrôlez ; placez la cible au-dessus du Deck. Si cette carte face recto est détruite dans une Zone Monstre, vous pouvez la placer face recto dans votre Zone Magie & Piège comme Magie Continue au lieu de l'envoyer au Cimetière.
   it: |-
