--- a/data/cards/31044787.yaml
+++ b/data/cards/31044787.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     If the combined ATK of all face-up monsters your opponent controls is higher than your LP: Make your opponent shuffle face-up monsters they control into the Deck (their choice), except monsters with 0 ATK, so that the combined ATK of the remaining monsters they control becomes less than or equal to your LP.
   de: |-
-    Falls die Summe der ATK aller offenen Monster, die dein Gegner kontrolliert, höher ist als deine LP: Lass deinen Gegner Monster, die er kontrolliert, ins Deck mischen (er bestimmt), so dass die Summe der ATK der verbleibenden Monster, die er kontrolliert, kleiner oder gleich deinen LP wird.
+    Falls die kombinierten ATK aller offenen Monster, die dein Gegner kontrolliert, höher sind als deine LP: Lass deinen Gegner offene Monster, die er kontrolliert, außer Monstern mit 0 ATK, ins Deck mischen (er bestimmt), sodass die kombinierten ATK der verbleibenden Monster, die er kontrolliert, kleiner oder gleich deinen LP werden.
   es: |-
-    Si el ATK combinado de todos los monstruos boca arriba que controle tu adversario es mayor que tus LP: haz que tu adversario baraje a su Deck monstruos que controle (a su elección), de modo que el ATK combinado de los monstruos que queden bajo su control sea menor o igual que tus LP.
+    Si el ATK combinado de todos los monstruos boca arriba que controle tu adversario es mayor que tus LP: haz que tu adversario baraje a su Deck monstruos boca arriba que controle (a su elección), excepto monstruos con 0 ATK, de modo que el ATK combinado de los monstruos que queden bajo su control sea igual o menor que tus LP.
   fr: |-
-    Si la somme des ATK de tous les monstres face recto contrôlés par votre adversaire est supérieure à vos LP : faites mélanger votre adversaire des monstres qu'il contrôle dans le Deck (son choix) de façon à ce que la somme des ATK des monstres restants qu'il contrôle devienne inférieure ou égale à vos LP.
+    Si la somme des ATK de tous les monstres face recto contrôlés par votre adversaire est supérieure à vos LP : faites mélanger votre adversaire des monstres face recto qu'il contrôle (monstres avec 0 ATK exclus) dans le Deck (son choix) de façon à ce que la somme des ATK des monstres restants qu'il contrôle devienne inférieure ou égale à vos LP.
   it: |-
-    Se la somma degli ATK di tutti i mostri scoperti controllati dal tuo avversario è superiore ai tuoi LP: fai mescolare al tuo avversario nel Deck mostri che lui controlla (di sua scelta) fino a quando la somma degli ATK dei mostri rimanenti che controlla diventa pari o inferiore ai tuoi LP.
+    Se la somma degli ATK di tutti i mostri scoperti controllati dal tuo avversario è superiore ai tuoi LP: fai mescolare al tuo avversario nel Deck mostri scoperti che lui controlla (a sua scelta), eccetto mostri con ATK 0, fino a quando la somma degli ATK dei mostri rimanenti che controlla diventa pari o inferiore ai tuoi LP.
   pt: |-
-    Se o ATK combinado de todos os monstros com a face para cima que seu oponente controla for maior que seus PV: faça com que seu oponente embaralhe no Deck monstros que ele controla (selecionados por ele), de forma que o ATK combinado dos monstros restantes que ele controla seja menor ou igual que os seus PV.
+    Se o ATK combinado de todos os monstros com a face para cima que seu oponente controla for maior que seus PV: faça com que seu oponente embaralhe no Deck os monstros com a face para cima que ele controla (ele seleciona), exceto monstros com 0 de ATK, de forma que o ATK combinado dos monstros restantes que ele controla se torne igual ou menor que os seus PV.
   ja: |-
     ①：相手フィールドの表側表示モンスターの攻撃力を合計した数値が自分のＬＰよりも高い場合に発動できる。相手フィールドの表側表示モンスターの攻撃力を合計した数値が自分のＬＰ以下になるように、相手は自身のフィールドの攻撃力が０以外の表側表示モンスターを選んで持ち主のデッキに戻さなければならない。
   ko: |-
