--- a/data/cards/32933942.yaml
+++ b/data/cards/32933942.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Diese Karte kann deinen Gegner direkt angreifen, aber wenn sie diesen Effekt verwendet, wird der Kampfschaden halbiert, den sie deinem Gegner zufügt. Falls diese offene Karte in einer Monsterzone zerstört wird, kannst du sie offen als Permanenten Zauber in deine Zauber- & Fallenzone legen, anstatt sie auf den Friedhof zu legen.
   es: |-
-    Esta carta puede atacar a tu adversario directamente, pero cuando use este efecto, cualquier daño de batalla que inflija a tu adversario se divide a la mitad. Si esta carta boca arriba es destruida en una Zona de Monstruos, puedes, en vez de mandarla al Cementerio, ponerla boca arriba en tu Zona de Magia y Trampas como una Mágica Continua.
+    Esta carta puede atacar a tu adversario directamente, pero cuando use este efecto, cualquier daño de batalla que inflija a tu adversario se divide a la mitad. Si esta carta boca arriba es destruida en una Zona de Monstruos, puedes ponerla boca arriba en tu Zona de Magia y Trampas como una Mágica Continua en lugar de mandarla al Cementerio.
   fr: |-
     Cette carte peut attaquer directement votre adversaire, mais lorsqu'elle utilise cet effet, les dommages de combat qu'elle inflige à votre adversaire sont divisés par deux. Si cette carte face recto est détruite dans une Zone Monstre, vous pouvez la placer face recto dans votre Zone Magie & Piège comme Magie Continue au lieu de l'envoyer au Cimetière.
   it: |-
