--- a/data/cards/37440988.yaml
+++ b/data/cards/37440988.yaml
@@ -25,11 +25,11 @@ text:
   es: |-
     7 monstruos "Bestia de Cristal"
     (Esta carta se trata siempre como una carta "Cristal Definitivo/a").
-    Debe ser Invocado por Fusión, o Invocado de Modo Especial Sacrificando 1 monstruo "Cristal Definitivo/a" de Nivel 10. Una vez por turno: puedes desterrar 1 monstruo "Bestia de Cristal" en tu Cementerio; hasta el final de este turno esta carta gana ATK igual al del monstruo desterrado. (Efecto Rápido): puedes Sacrificar esta carta Invocada por Fusión; baraja al Deck todas las cartas en el Campo.
+    Debe ser ya sea Invocado por Fusión, o Invocado de Modo Especial Sacrificando 1 monstruo "Cristal Definitivo/a" de Nivel 10. Una vez por turno: puedes desterrar 1 monstruo "Bestia de Cristal" en tu Cementerio; hasta el final de este turno esta carta gana ATK igual al del monstruo desterrado. (Efecto Rápido): puedes Sacrificar esta carta Invocada por Fusión; baraja al Deck todas las cartas en el Campo.
   fr: |-
     7 monstres "Bête Cristalline"
     (Cette carte est toujours traitée comme une carte "Cristal Ultime".)
-    Uniquement Invocable par Fusion, ou Invocable Spécialement en Sacrifiant 1 monstre "Cristal Ultime" de Niveau 10. Une fois par tour : vous pouvez bannir 1 monstre "Bête Cristalline" depuis votre Cimetière ; jusqu'à la fin de ce tour, cette carte gagne une ATK égale à celle du monstre banni. (Effet Rapide) : vous pouvez Sacrifier cette carte Invoquée par Fusion ; mélangez toutes les cartes sur le Terrain dans le Deck.
+    Uniquement soit Invocable par Fusion soit Invocable Spécialement en Sacrifiant 1 monstre "Cristal Ultime" de Niveau 10. Une fois par tour : vous pouvez bannir 1 monstre "Bête Cristalline" depuis votre Cimetière ; jusqu'à la fin de ce tour, cette carte gagne une ATK égale à celle du monstre banni. (Effet Rapide) : vous pouvez Sacrifier cette carte Invoquée par Fusion ; mélangez toutes les cartes sur le Terrain dans le Deck.
   it: |-
     7 mostri "Bestia Cristallo"
     (Questa carta viene sempre considerata come una carta "Cristallo Finale".)
@@ -37,7 +37,7 @@ text:
   pt: |-
     7 monstros "Fera Cristalina"
     (Este card deve ser sempre considerado como um card "Cristalino(a) Definitivo(a)".)
-    Deve ser Invocado por Invocação-Fusão ou deve ser Invocado por Invocação-Especial ao oferecer como Tributo 1 monstro "Cristalino(a) Definitivo(a)" de Nível 10. Uma vez por turno: você pode banir 1 monstro "Fera Cristalina" do seu Cemitério; até o final deste turno, este card ganha ATK igual ao do monstro banido. (Efeito Rápido): você pode oferecer este card Invocado por Invocação-Fusão como Tributo; embaralhe no Deck todos os cards no campo.
+    Deve ser Invocado por Invocação-Fusão ou por Invocação-Especial ao oferecer como Tributo 1 monstro "Cristalino(a) Definitivo(a)" de Nível 10. Uma vez por turno: você pode banir 1 monstro "Fera Cristalina" do seu Cemitério; até o final deste turno, este card ganha ATK igual ao do monstro banido. (Efeito Rápido): você pode oferecer este card Invocado por Invocação-Fusão como Tributo; embaralhe no Deck todos os cards no campo.
   ja: |-
     「宝玉獣」モンスター×７
     このカードは融合召喚及び以下の方法でのみ特殊召喚できる。●自分フィールドのレベル１０の「究極宝玉神」モンスター１体をリリースした場合にＥＸデッキから特殊召喚できる。①：１ターンに１度、自分の墓地から「宝玉獣」モンスター１体を除外して発動できる。このカードの攻撃力はターン終了時まで、除外したモンスターの攻撃力分アップする。②：融合召喚したこのカードをリリースして発動できる。フィールドのカードを全て持ち主のデッキに戻す。この効果は相手ターンでも発動できる。
