--- a/data/cards/47030842.yaml
+++ b/data/cards/47030842.yaml
@@ -12,7 +12,7 @@ name:
   ko: 기아기아크셀
   ko_rr:
   zh-TW: 齒輪齒輪飆速車
-  zh-CN: 齿轮齿轮加速人
+  zh-CN: 齿轮齿轮飙速车
 text:
   en: |-
     If you control a "Geargia" monster, you can Special Summon this card (from your hand) in Defense Position. When this card is sent from the field to the Graveyard: You can target 1 "Geargia" monster in your Graveyard, except "Geargiaccelerator"; add that target to your hand.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     我方场上存在冠有「齒輪齒輪」之名的怪兽的场合，可从手牌以表侧守备表示特殊召唤此卡。此外，此卡从场上被送入墓地时，可从我方墓地选择1只「齒輪齒輪飆速車」以外的冠有「齒輪齒輪」之名的怪兽加入手牌。
   zh-CN: |-
-    自己场上有名字带有「齿轮齿轮」的怪兽存在的场合，这张卡可以从手卡表侧守备表示特殊召唤。此外，这张卡从场上送去墓地时，可以从自己墓地选择「齿轮齿轮加速人」以外的1只名字带有「齿轮齿轮」的怪兽加入手卡。
+    ①：自己场上有"齿轮齿轮"怪兽存在的情况下，可将此卡从手牌以守备表示特殊召唤。②：此卡从场上被送至墓地时，以自己墓地"齿轮齿轮飙速车"以外的1只"齿轮齿轮"怪兽为对象可以发动。将该怪兽加入手牌。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: EARTH
@@ -125,6 +125,11 @@ sets:
   zh-TW:
   - set_number: REDU-TC028
     set_name: Return of the Duelist
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: TM01-SC064
+    set_name: 'Theme Pack: War of Infinite Machine'
     rarities:
     - Common
 limit_regulation:
