--- a/data/cards/71786742.yaml
+++ b/data/cards/71786742.yaml
@@ -32,7 +32,7 @@ text:
     이 카드를 릴리스하고, 자신의 묘지에 존재하는 레벨 4의 기계족 몬스터 1장을 선택하고 발동한다. 선택한 몬스터를 묘지에서 특수 소환한다. 이 효과로 특수 소환한 몬스터의 효과는 무효화된다.
   zh-TW:
   zh-CN: |-
-    把这张卡解放，选择自己墓地1只机械族·4星怪兽才能发动。选择的怪兽特殊召唤。这个效果特殊召唤的怪兽的效果无效化。
+    ①：解放此卡，以自己墓地的1只机械族・等级4怪兽为对象可以发动。将该怪兽特殊召唤。以此效果特殊召唤的怪兽的效果无效化。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: EARTH
@@ -122,6 +122,11 @@ sets:
     set_name: 'Duelist Set: Version Machine-Gear Troopers'
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: TM01-SC061
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
