--- a/data/cards/95600067.yaml
+++ b/data/cards/95600067.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Falls diese Karte ein Monster eines Gegners angreift, erhält sie nur während des Damage Steps 400 ATK. Falls diese offene Karte in einer Monsterzone zerstört wird, kannst du sie offen als Permanenten Zauber in deine Zauber- & Fallenzone legen, anstatt sie auf den Friedhof zu legen.
   es: |-
-    Si esta carta ataca a un monstruo del adversario, ésta gana 400 ATK sólo durante el Damage Step. Si esta carta boca arriba es destruida en una Zona de Monstruos, puedes, en vez de mandarla al Cementerio, ponerla boca arriba en tu Zona de Magia y Trampas como una Mágica Continua.
+    Si esta carta ataca a un monstruo del adversario, ésta gana 400 ATK sólo durante el Damage Step. Si esta carta boca arriba es destruida en una Zona de Monstruos, puedes ponerla boca arriba en tu Zona de Magia y Trampas como una Mágica Continua en lugar de mandarla al Cementerio.
   fr: |-
     Si cette carte attaque un monstre de l'adversaire, elle gagne 400 ATK durant la Damage Step uniquement. Si cette carte face recto est détruite dans une Zone Monstre, vous pouvez la placer face recto dans votre Zone Magie & Piège comme Magie Continue au lieu de l'envoyer au Cimetière.
   it: |-
