--- a/data/cards/08491961.yaml
+++ b/data/cards/08491961.yaml
@@ -120,6 +120,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 517211
