--- a/data/cards/24224830.yaml
+++ b/data/cards/24224830.yaml
@@ -225,6 +225,6 @@ sets:
     - Secret Rare
     - Extra Secret Rare
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Limited
   ocg: Semi-Limited
 yugipedia_page_id: 548648
