--- a/data/cards/26118970.yaml
+++ b/data/cards/26118970.yaml
@@ -104,6 +104,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 572658
