--- a/data/cards/32807846.yaml
+++ b/data/cards/32807846.yaml
@@ -734,7 +734,7 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Limited
   ocg: Limited
   speed: Unlimited
 yugipedia_page_id: 296
