--- a/data/cards/33396948.yaml
+++ b/data/cards/33396948.yaml
@@ -344,6 +344,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Limited
   ocg: Limited
 yugipedia_page_id: 278
