--- a/data/cards/35316708.yaml
+++ b/data/cards/35316708.yaml
@@ -94,6 +94,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Limited
   ocg: Limited
 yugipedia_page_id: 1761
