--- a/data/cards/43040603.yaml
+++ b/data/cards/43040603.yaml
@@ -246,6 +246,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 17219
