--- a/data/cards/44519536.yaml
+++ b/data/cards/44519536.yaml
@@ -286,6 +286,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Limited
   ocg: Limited
 yugipedia_page_id: 271
