--- a/data/cards/50588353.yaml
+++ b/data/cards/50588353.yaml
@@ -150,6 +150,6 @@ sets:
     - Secret Rare
     - Extra Secret Rare
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Limited
   ocg: Limited
 yugipedia_page_id: 532968
