--- a/data/cards/69015963.yaml
+++ b/data/cards/69015963.yaml
@@ -165,6 +165,6 @@ sets:
     rarities:
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Limited
   ocg: Limited
 yugipedia_page_id: 23
