--- a/data/cards/75500286.yaml
+++ b/data/cards/75500286.yaml
@@ -357,6 +357,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Limited
   ocg: Limited
 yugipedia_page_id: 16614
