--- a/data/cards/03040496.yaml
+++ b/data/cards/03040496.yaml
@@ -131,6 +131,6 @@ sets:
     rarities:
     - Prismatic Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Unlimited
 yugipedia_page_id: 738456
