--- a/data/cards/35371948.yaml
+++ b/data/cards/35371948.yaml
@@ -141,6 +141,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Unlimited
   ocg: Limited
 yugipedia_page_id: 480275
