--- a/data/cards/43262273.yaml
+++ b/data/cards/43262273.yaml
@@ -118,6 +118,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 102337
