--- a/data/cards/34090915.yaml
+++ b/data/cards/34090915.yaml
@@ -1,7 +1,7 @@
 konami_id: 17808
 password: 34090915
 name:
-  en: Rebranded
+  en: Branded Regained
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 复烙印
 text:
   en: |-
-    If a LIGHT and/or DARK monster(s) is banished (except during the Damage Step): You can target 1 of those monsters; place it on the bottom of the Deck, and if you do, draw 1 card. You can only use this effect of "Rebranded" once per turn. Once per turn, if your opponent Normal or Special Summons a monster(s) (except during the Damage Step): You can target 1 "Bystial" monster in your GY; Special Summon it. You can only use this effect of "Rebranded" once per Chain.
+    If a LIGHT or DARK monster(s) is banished (except during the Damage Step): You can target 1 of those monsters; place that monster on the bottom of the Deck, and if you do, draw 1 card. You can only use this effect of "Branded Regained" once per turn. Once per turn, if your opponent Normal or Special Summons a monster (except during the Damage Step): You can target 1 "Bystial" monster in your GY; Special Summon it. You can only activate this effect of "Branded Regained" once per Chain.
   de:
   es:
   fr:
@@ -32,6 +32,31 @@ property: Continuous
 series:
 - Branded
 sets:
+  en:
+  - set_number: DABL-EN053
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  de:
+  - set_number: DABL-DE053
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: DABL-FR053
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  it:
+  - set_number: DABL-IT053
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: DABL-PT053
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
   ja:
   - set_number: DABL-JP053
     set_name: Darkwing Blast
