--- a/data/cards/60242223.yaml
+++ b/data/cards/60242223.yaml
@@ -1,7 +1,7 @@
 konami_id: 17763
 password: 60242223
 name:
-  en: Byssted Saronir
+  en: Bystial Saronir
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 深渊之兽 萨隆恶龙
 text:
   en: |-
-    You can target 1 LIGHT or DARK monster in either GY; banish it, and if you do, Special Summon this card from your hand. This is a Quick Effect if your opponent controls a monster. If this card is sent to the GY: You can send 1 "Bystial" monster, except "Byssted Saronir", or 1 "Branded" Spell/Trap from your Deck to the GY. You can only use each effect of "Byssted Saronir" once per turn.
+    You can target 1 LIGHT or DARK monster in either GY; banish it, and if you do, Special Summon this card from your hand. This is a Quick Effect if your opponent controls a monster. If this card is sent to the GY: You can send 1 "Bystial" monster or 1 "Branded" Spell/Trap from your Deck to the GY, except "Bystial Saronir". You can only use each effect of "Bystial Saronir" once per turn.
   de:
   es:
   fr:
@@ -36,6 +36,26 @@ def: 2000
 series:
 - Bystial
 sets:
+  en:
+  - set_number: DABL-EN007
+    set_name: Darkwing Blast
+    rarities:
+  de:
+  - set_number: DABL-DE007
+    set_name: Darkwing Blast
+    rarities:
+  fr:
+  - set_number: DABL-FR007
+    set_name: Darkwing Blast
+    rarities:
+  it:
+  - set_number: DABL-IT007
+    set_name: Darkwing Blast
+    rarities:
+  pt:
+  - set_number: DABL-PT007
+    set_name: Darkwing Blast
+    rarities:
   ja:
   - set_number: DABL-JP007
     set_name: Darkwing Blast
