--- a/data/cards/32731036.yaml
+++ b/data/cards/32731036.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 深渊之兽 赤红逆龙
 text:
   en: |-
-    Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand or GY) by Tributing 1 Level 6 or higher DARK Dragon monster. You can only Special Summon "The Bystial Lubellion" once per turn this way. You can only use each of the following effects of "The Bystial Lubellion" once per turn. You can send this card from your hand to the GY; add 1 "Bystial" monster from your Deck to your hand, except "The Bystial Lubellion". During your Main Phase: You can place 1 "Branded" Continuous Spell/Trap from your Deck face-up on your field.
+    Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand or GY) by Tributing 1 Level 6 or higher DARK Dragon monster. You can only Special Summon "The Bystial Lubellion" once per turn this way. You can send this card from your hand to the GY; add 1 "Bystial" monster from your Deck to your hand, except "The Bystial Lubellion". During your Main Phase: You can place 1 "Branded" Continuous Spell/Trap from your Deck face-up on your field. You can only use each effect of "The Bystial Lubellion" once per turn.
   de:
   es:
   fr:
@@ -40,22 +40,27 @@ sets:
   - set_number: DABL-EN009
     set_name: Darkwing Blast
     rarities:
+    - Secret Rare
   de:
   - set_number: DABL-DE009
     set_name: Darkwing Blast
     rarities:
+    - Secret Rare
   fr:
   - set_number: DABL-FR009
     set_name: Darkwing Blast
     rarities:
+    - Secret Rare
   it:
   - set_number: DABL-IT009
     set_name: Darkwing Blast
     rarities:
+    - Secret Rare
   pt:
   - set_number: DABL-PT009
     set_name: Darkwing Blast
     rarities:
+    - Secret Rare
   ja:
   - set_number: DABL-JP009
     set_name: Darkwing Blast
