--- a/data/cards/33854624.yaml
+++ b/data/cards/33854624.yaml
@@ -1,7 +1,7 @@
 konami_id: 17762
 password: 33854624
 name:
-  en: Byssted Magnumut
+  en: Bystial Magnamhut
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 深渊之兽 玛格巨龙
 text:
   en: |-
-    You can target 1 LIGHT or DARK monster in either GY; banish it, and if you do, Special Summon this card from your hand. This is a Quick Effect if your opponent controls a monster. If this card is Special Summoned: You can activate this effect; add 1 Dragon monster from your Deck or GY to your hand during the End Phase of this turn, except "Byssted Magnumut". You can only use each effect of "Byssted Magnumut" once per turn.
+    You can target 1 LIGHT or DARK monster in either GY; banish it, and if you do, Special Summon this card from your hand. This is a Quick Effect if your opponent controls a monster. If this card is Special Summoned: You can activate this effect; during the End Phase of this turn, add 1 Dragon monster from your Deck or GY to your hand, except "Bystial Magnamhut". You can only use each effect of "Bystial Magnamhut" once per turn.
   de:
   es:
   fr:
@@ -36,6 +36,31 @@ def: 2000
 series:
 - Bystial
 sets:
+  en:
+  - set_number: DABL-EN006
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  de:
+  - set_number: DABL-DE006
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: DABL-FR006
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  it:
+  - set_number: DABL-IT006
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: DABL-PT006
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
   ja:
   - set_number: DABL-JP006
     set_name: Darkwing Blast
