--- a/data/cards/95515789.yaml
+++ b/data/cards/95515789.yaml
@@ -1,7 +1,7 @@
 konami_id: 17767
 password: 95515789
 name:
-  en: Red Cartesia, the Virtuous
+  en: Blazing Cartesia, the Virtuous
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 赫之圣女 卡尔特西娅
 text:
   en: |-
-    If you have "Fallen of Albaz" on your field or in your GY: You can Special Summon this card from your hand. During the Main Phase (Quick Effect): You can Fusion Summon 1 Level 8 or higher Fusion Monster from your Extra Deck, using monsters from your hand or field as Fusion Material. During the End Phase, if a Fusion Monster(s) was sent to your GY this turn: You can add this card from the GY to your hand. You can only use each effect of "Red Cartesia, the Virtuous" once per turn.
+    If you control "Fallen of Albaz" or it is in your GY: You can Special Summon this card from your hand. During the Main Phase (Quick Effect): You can Fusion Summon 1 Level 8 or higher Fusion Monster from your Extra Deck, using monsters from your hand or field as material. During the End Phase, if a Fusion Monster(s) was sent to your GY this turn: You can add this card from the GY to your hand. You can only use each effect of "Blazing Cartesia, the Virtuous" once per turn.
   de:
   es:
   fr:
@@ -34,6 +34,31 @@ level: 4
 atk: 1500
 def: 1500
 sets:
+  en:
+  - set_number: DABL-EN011
+    set_name: Darkwing Blast
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: DABL-DE011
+    set_name: Darkwing Blast
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: DABL-FR011
+    set_name: Darkwing Blast
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: DABL-IT011
+    set_name: Darkwing Blast
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: DABL-PT011
+    set_name: Darkwing Blast
+    rarities:
+    - Secret Rare
   ja:
   - set_number: DABL-JP011
     set_name: Darkwing Blast
