--- a/data/cards/69120785.yaml
+++ b/data/cards/69120785.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 深渊之兽 失白之龙
 text:
   en: |-
-    Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand or GY) by Tributing 2 "Bystial" monsters. While you control this card Summoned this way, negate the effects of all Ritual, Fusion, Synchro, Xyz, and Link Monsters on the field. If this face-up card in its owner's control leaves the field because of an opponent's card effect: You can banish all face-down cards from each player's Extra Deck, face-up, until your opponent's End Phase.
+    Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand or GY) by Tributing 2 "Bystial" monsters. While this card, Summoned this way, is in the Monster Zone, negate the effects of all face-up Ritual, Fusion, Synchro, Xyz, and Link Monsters on the field. If this face-up card in its owner's control leaves the field because of an opponent's card effect: You can banish all face-down cards in the Extra Decks, face-up, until your opponent's End Phase.
   de:
   es:
   fr:
@@ -36,6 +36,31 @@ def: 3500
 series:
 - Bystial
 sets:
+  en:
+  - set_number: DABL-EN010
+    set_name: Darkwing Blast
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: DABL-DE010
+    set_name: Darkwing Blast
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: DABL-FR010
+    set_name: Darkwing Blast
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: DABL-IT010
+    set_name: Darkwing Blast
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: DABL-PT010
+    set_name: Darkwing Blast
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DABL-JP010
     set_name: Darkwing Blast
