--- a/data/cards/89544521.yaml
+++ b/data/cards/89544521.yaml
@@ -12,7 +12,7 @@ name:
   ko: 분보그 제트
   ko_rr:
   zh-TW:
-  zh-CN: 文具电子人喷气机
+  zh-CN: 文具博格・喷射机
 text:
   en: |-
     1 Tuner + 1 or more non-Tuner monsters
@@ -52,8 +52,8 @@ text:
     "분보그 제트" 의 ②③의 효과는 1턴에 1번, 1개밖에 사용할 수 없다. ① : 이 카드의 공격력 / 수비력은, 필드의 "분보그" 카드의 수 × 500 올린다. ② : 자신 필드의 "분보그" 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴하고, 덱에서 "분보그" 몬스터 1장을 특수 소환한다. ③ : 자신 필드의 "분보그" 카드 1장과 필드의 앞면 표시의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다.
   zh-TW:
   zh-CN: |-
-    调整＋调整以外的怪兽1只以上
-    「文具电子人喷气机」的②③的效果1回合只能有1次使用其中任意1个。①：这张卡的攻击力·守备力上升场上的「文具电子人」卡数量×500。②：以自己场上1张「文具电子人」卡为对象才能发动。那张卡破坏，从卡组把1只「文具电子人」怪兽特殊召唤。③：以自己场上1张「文具电子人」卡和场上1张表侧表示的卡为对象才能发动。那些卡破坏。
+    协调＋1只以上协调以外的怪兽
+    此卡名的②③效果1回合1次，仅可使用其中1个。①：此卡的攻击力・守备力上升相当于场上"文具博格"卡数量×500的数值。②：以自己场上的1张"文具博格"卡为对象可以发动。破坏该卡，从牌组将1只"文具博格"怪兽特殊召唤。③：以自己场上的1张"文具博格"卡和场上的1张表侧表示卡为对象可以发动。将该卡破坏。
 card_type: Monster
 monster_type_line: Machine / Synchro / Effect
 attribute: EARTH
@@ -117,6 +117,11 @@ sets:
   ko:
   - set_number: DOCS-KR049
     set_name: Dimension of Chaos
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: TM01-SC082
+    set_name: 'Theme Pack: War of Infinite Machine'
     rarities:
     - Common
 limit_regulation:
