--- a/data/cards/68933343.yaml
+++ b/data/cards/68933343.yaml
@@ -12,7 +12,7 @@ name:
   ko: 사운드 워리어 베이시스
   ko_rr:
   zh-TW:
-  zh-CN: 音响战士 贝司手
+  zh-CN: 音响战士 贝西斯
 text:
   en: |-
     Once per turn, you can select 1 face-up "Symphonic Warrior" monster on the field. Increase its Level by the number of cards in your hand; this increase lasts until the End Phase. You can remove from play this card from your Graveyard to select 1 face-up "Symphonic Warrior" monster you control, and increase its Level by the number of cards in your hand; this increase lasts until the End Phase.
@@ -32,7 +32,7 @@ text:
     1턴에 1번, 필드 위에 앞면 표시로 존재하는 "사운드 워리어"라는 이름이 붙은 몬스터 1장을 선택하고 발동한다. 엔드 페이즈시까지, 선택한 몬스터의 레벨을 패의 매수만큼 올린다. 또한 자신의 묘지에 존재하는 이 카드를 게임에서 제외하는 것으로, 자신 필드 위에 앞면 표시로 존재하는 "사운드 워리어"라는 이름이 붙은 몬스터 1장의 레벨을 엔드 페이즈시까지 패의 매수만큼 올린다.
   zh-TW:
   zh-CN: |-
-    ①：1回合1次，以场上1只「音响战士」怪兽为对象才能发动。直到回合结束时，那只怪兽的等级上升手卡数量的数值。②：把墓地的这张卡除外，以自己场上1只「音响战士」怪兽为对象才能发动。直到回合结束时，那只自己的「音响战士」怪兽的等级上升手卡数量的数值。
+    ①：1回合1次，以场上的1只"音响战士"怪兽为对象可以发动。直至回合结束时为止，该怪兽的等级上升相当于手牌张数的数值。②：将墓地的此卡除外，以自己场上的1只"音响战士"怪兽为对象可以发动。直至回合结束时为止，该自己的"音响战士"怪兽的等级上升相当于手牌张数的数值。
 card_type: Monster
 monster_type_line: Machine / Tuner
 attribute: WIND
@@ -80,6 +80,11 @@ sets:
   ko:
   - set_number: STOR-KR033
     set_name: Storm of Ragnarok
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: TM01-SC054
+    set_name: 'Theme Pack: War of Infinite Machine'
     rarities:
     - Common
 limit_regulation:
