--- a/data/cards/yugipedia903942.yaml
+++ b/data/cards/yugipedia903942.yaml
@@ -7,15 +7,15 @@ name:
   fr:
   it:
   pt:
-  ja:
-  ja_romaji:
+  ja: <ruby>重<rt>かさね</rt></ruby>の<ruby>忍<rt>にん</rt></ruby><ruby>者<rt>じゃ</rt></ruby>－<ruby>磁<rt>ジ</rt></ruby><ruby>翁<rt>オウ</rt></ruby>
+  ja_romaji: Kasane no Ninja - Jiou
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    If this card is Normal/Special Summoned or flipped face-up: You can target up to 2 face-up monsters on the field; change them to face-down Defense Position. Opponent's monsters changed to face-down Defense Position by this effect cannot change their battle positions. If another monster(s) on the field is flipped face-up while this monster is on the field: You can target 1 card your opponent controls; destroy it. You can only use each effect of "Jio the Weighted Ninja" once per turn.
+    If this card is Normal Summoned, Special Summoned, or flipped face-up: You can target up to 2 face-up monsters on the field; change them to face-down Defense Position. Opponent's monsters changed to face-down Defense Position by this effect cannot change their battle positions. If another monster(s) on the field is flipped face-up while this monster is face-up on the field: You can target 1 card your opponent controls; destroy it. You can only use each effect of "Jio the Weighted Ninja" once per turn.
   de:
   es:
   fr:
