--- a/data/cards/16769305.yaml
+++ b/data/cards/16769305.yaml
@@ -1,7 +1,7 @@
 konami_id: 17789
 password: 16769305
 name:
-  en: Doom-Tune - GT19
+  en: Turbo-Tainted Hot Rod GT19
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     FLIP: You can declare a Level from 1 to 9; this card becomes that Level until the end of this turn.
-    During the Main Phase, if you control this card that was flipped face-up (Quick Effect): You can target 1 other face-up monster on either player's field; immediately after this effect resolves, Synchro Summon using only this card and that target. You can only use 1 "Doom-Tune - GT19" effect per turn, and only once that turn.
+    During the Main Phase, if you control this card that was flipped face-up (Quick Effect): You can target 1 other face-up monster on either player's field; immediately after this effect resolves, Synchro Summon using only this card and that target. You can only use 1 "Turbo-Tainted Hot Rod GT19" effect per turn, and only once that turn.
   de:
   es:
   fr:
