--- a/data/cards/23965033.yaml
+++ b/data/cards/23965033.yaml
@@ -1,7 +1,7 @@
 konami_id: 17614
 password: 23965033
 name:
-  en: Amazoness Kaiserin
+  en: Amazoness Augusta
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 "Amazoness" Fusion Monster + 1 "Amazoness" monster
-    If this card is Fusion Summoned: You can Special Summon 1 "Amazoness" monster from your Deck. You can only use this effect of "Amazoness Kaiserin" once per turn. Your opponent cannot target other "Amazoness" cards you control with card effects, also they cannot be destroyed by your opponent's card effects. This card that was Fusion Summoned using "Amazoness Empress" and/or "Amazoness Queen" as material can make a second attack during each Battle Phase.
+    If this card is Fusion Summoned: You can Special Summon 1 "Amazoness" monster from your Deck. You can only use this effect of "Amazoness Augusta" once per turn. Your opponent cannot target other "Amazoness" cards you control with card effects, also they cannot be destroyed by your opponent's card effects. This card that was Fusion Summoned using "Amazoness Empress" and/or "Amazoness Queen" as material can make a second attack during each Battle Phase.
   de:
   es:
   fr:
