--- a/data/cards/59353647.yaml
+++ b/data/cards/59353647.yaml
@@ -1,7 +1,7 @@
 konami_id: 17615
 password: 59353647
 name:
-  en: Amazoness King Liger
+  en: Amazoness Pet Liger King
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Level 5 or higher "Amazoness" monster + 1 "Amazoness" monster
-    Monsters your opponent controls cannot attack monsters, except this one. You can target 1 "Amazoness" card you control and 1 Warrior "Amazoness" monster in your GY; destroy that card on the field, and if you do, Special Summon that other monster from the GY. This card cannot attack the turn you activate this effect. You can only use this effect of "Amazoness King Liger" once per turn.
+    Monsters your opponent controls cannot attack monsters, except this one. You can target 1 "Amazoness" card you control and 1 Warrior "Amazoness" monster in your GY; destroy that card on the field, and if you do, Special Summon that other monster from the GY. This card cannot attack the turn you activate this effect. You can only use this effect of "Amazoness Pet Liger King" once per turn.
   de:
   es:
   fr:
