--- a/data/cards/86758746.yaml
+++ b/data/cards/86758746.yaml
@@ -1,7 +1,7 @@
 konami_id: 17616
 password: 86758746
 name:
-  en: Amazoness Secret Technique
+  en: Amazoness Secret Arts
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 亚马逊的秘术
 text:
   en: |-
-    Fusion Summon 1 "Amazoness" Fusion Monster from your Extra Deck, using monsters from your hand or field as Fusion Material. During your Main Phase: You can banish this card from your GY; once, if you would Fusion Summon an "Amazoness" Fusion Monster this turn, you can also send 1 "Amazoness" monster from your Extra Deck to the GY as material. You can only use 1 "Amazoness Secret Technique" effect per turn, and only once that turn.
+    Fusion Summon 1 "Amazoness" Fusion Monster from your Extra Deck, using monsters from your hand or field as Fusion Material. During your Main Phase: You can banish this card from your GY; once, if you would Fusion Summon an "Amazoness" Fusion Monster this turn, you can also send 1 "Amazoness" monster from your Extra Deck to the GY as material. You can only use 1 "Amazoness Secret Arts" effect per turn, and only once that turn.
   de:
   es:
   fr:
