--- a/data/cards/89552119.yaml
+++ b/data/cards/89552119.yaml
@@ -1,7 +1,7 @@
 konami_id: 17791
 password: 89552119
 name:
-  en: Spirit Cucomeback Horse
+  en: Cucumber Horse
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 精灵冥骑-急还马
 text:
   en: |-
-    Send this card in the Monster Zone to the GY, except during the Battle Phase. At the start of the Battle Phase, if this card is in your GY: You can send 1 Plant monster from your hand or face-up field to the GY; Special Summon this card, then you can Special Summon 1 monster from either GY to your field. Send all monsters Special Summoned by this effect to the GY at the end of the Battle Phase. You can only use this effect of "Spirit Cucomeback Horse" once per turn.
+    Send this card in the Monster Zone to the GY, except during the Battle Phase. At the start of the Battle Phase, if this card is in your GY: You can send 1 Plant monster from your hand or face-up field to the GY; Special Summon this card, then you can Special Summon 1 monster from either GY to your field. Send all monsters Special Summoned by this effect to the GY at the end of the Battle Phase. You can only use this effect of "Cucumber Horse" once per turn.
   de:
   es:
   fr:
