--- a/data/cards/97870394.yaml
+++ b/data/cards/97870394.yaml
@@ -1,7 +1,7 @@
 konami_id: 17613
 password: 97870394
 name:
-  en: Amazoness Shaman
+  en: Amazoness Spiritualist
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 亚马逊灵术师
 text:
   en: |-
-    If this card is in your hand or GY: You can target 1 "Amazoness" card you control, except "Amazoness Shaman"; you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except "Amazoness" monsters, also return the targeted card to the hand, and if you do, Special Summon this card. If this card is Special Summoned: You can add 1 "Polymerization" from your Deck to your hand. You can only use each effect of "Amazoness Shaman" once per turn.
+    If this card is in your hand or GY: You can target 1 "Amazoness" card you control, except "Amazoness Spiritualist"; you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except "Amazoness" monsters, also return the targeted card to the hand, and if you do, Special Summon this card. If this card is Special Summoned: You can add 1 "Polymerization" from your Deck to your hand. You can only use each effect of "Amazoness Spiritualist" once per turn.
   de:
   es:
   fr:
