--- a/data/cards/33578406.yaml
+++ b/data/cards/33578406.yaml
@@ -1,7 +1,7 @@
 konami_id: 17825
 password: 33578406
 name:
-  en: True Bamboo Sword
+  en: Original Bamboo Sword
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 真刀竹光
 text:
   en: |-
-    The equipped monster gains 0 ATK. When the equipped monster inflicts battle damage by a direct attack: You can destroy all monsters your opponent controls. You can send this equipped card to the GY; equip 1 "Bamboo Sword" Equip Spell from your Deck to 1 face-up monster on the field, except "True Bamboo Sword".
+    The equipped monster gains 0 ATK. When the equipped monster inflicts battle damage by a direct attack: You can destroy all monsters your opponent controls. You can send this equipped card to the GY; equip 1 "Bamboo Sword" Equip Spell from your Deck to 1 face-up monster on the field, except "Original Bamboo Sword".
   de:
   es:
   fr:
