--- a/data/cards/28004531.yaml
+++ b/data/cards/28004531.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 空牙团的载货 雷克斯
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 Spell/Trap "Fur Hire" from your Deck to your hand. During the Main Phase, if you control a monster "Fur Hire" (Quick Effect): You can banish this card from your GY, then target 1 card "Fur Hire" in your GY; add it to your hand, or, if it is a monster, you can Special Summon it instead. You can only use each effect of "Rex, Freight Fur Hire" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 Spell/Trap "Fur Hire" from your Deck to your hand. During the Main Phase, if you control a monster "Fur Hire" (Quick Effect): You can banish this card from your GY, then target 1 card "Fur Hire" in your GY; either add it to your hand, or Special Summon it if it was a monster. You can only use each effect of "Rex, Freight Fur Hire" once per turn.
   de:
   es:
   fr:
@@ -36,6 +36,31 @@ def: 200
 series:
 - Fur Hire
 sets:
+  en:
+  - set_number: DABL-EN027
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  de:
+  - set_number: DABL-DE027
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: DABL-FR027
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  it:
+  - set_number: DABL-IT027
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: DABL-PT027
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
   ja:
   - set_number: DABL-JP027
     set_name: Darkwing Blast
