--- a/data/cards/62015408.yaml
+++ b/data/cards/62015408.yaml
@@ -75,7 +75,7 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
-  - set_number: OP20-EN0??
+  - set_number: OP20-EN001
     set_name: OTS Tournament Pack 20
     rarities:
     - Ultimate Rare
@@ -112,6 +112,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
+  - set_number: OP20-DE001
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Ultimate Rare
   fr:
   - set_number: SHVI-FR040
     set_name: Shining Victories
@@ -141,6 +145,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
+  - set_number: OP20-FR001
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Ultimate Rare
   it:
   - set_number: SHVI-IT040
     set_name: Shining Victories
@@ -170,6 +178,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
+  - set_number: OP20-IT001
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Ultimate Rare
   pt:
   - set_number: SHVI-PT040
     set_name: Shining Victories
@@ -199,6 +211,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
+  - set_number: OP20-PT001
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Ultimate Rare
   ja:
   - set_number: SHVI-JP040
     set_name: Shining Victories
