--- a/data/cards/17266660.yaml
+++ b/data/cards/17266660.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: OTS Tournament Pack 7
     rarities:
     - Ultimate Rare
+  - set_number: OP20-EN005
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   de:
   - set_number: TDGS-DE082
     set_name: The Duelist Genesis
@@ -87,6 +91,10 @@ sets:
     set_name: OTS Tournament Pack 7
     rarities:
     - Ultimate Rare
+  - set_number: OP20-DE005
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   fr:
   - set_number: TDGS-FR082
     set_name: The Duelist Genesis
@@ -109,6 +117,10 @@ sets:
     set_name: OTS Tournament Pack 7
     rarities:
     - Ultimate Rare
+  - set_number: OP20-FR005
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   it:
   - set_number: TDGS-IT082
     set_name: The Duelist Genesis
@@ -131,6 +143,10 @@ sets:
     set_name: OTS Tournament Pack 7
     rarities:
     - Ultimate Rare
+  - set_number: OP20-IT005
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   pt:
   - set_number: BP03-PT050
     set_name: 'Battle Pack 3: Monster League'
@@ -145,6 +161,10 @@ sets:
     set_name: OTS Tournament Pack 7
     rarities:
     - Ultimate Rare
+  - set_number: OP20-PT005
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   ja:
   - set_number: EXP2-JP013
     set_name: Extra Pack Volume 2
