--- a/data/cards/26077387.yaml
+++ b/data/cards/26077387.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: OP20-EN002
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Ultimate Rare
   de:
   - set_number: DASA-DE029
     set_name: Dark Saviors
@@ -77,6 +81,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: OP20-DE002
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Ultimate Rare
   fr:
   - set_number: DASA-FR029
     set_name: Dark Saviors
@@ -94,6 +102,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: OP20-FR002
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Ultimate Rare
   it:
   - set_number: DASA-IT029
     set_name: Dark Saviors
@@ -111,6 +123,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: OP20-IT002
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Ultimate Rare
   pt:
   - set_number: DASA-PT029
     set_name: Dark Saviors
@@ -128,6 +144,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: OP20-PT002
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Ultimate Rare
   ja:
   - set_number: DBDS-JP029
     set_name: 'Deck Build Pack: Dark Savers'
