--- a/data/cards/62962630.yaml
+++ b/data/cards/62962630.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: OP20-EN003
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Ultimate Rare
   de:
   - set_number: DAMA-DE006
     set_name: Dawn of Majesty
@@ -70,6 +74,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: OP20-DE003
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Ultimate Rare
   fr:
   - set_number: DAMA-FR006
     set_name: Dawn of Majesty
@@ -83,6 +91,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: OP20-FR003
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Ultimate Rare
   it:
   - set_number: DAMA-IT006
     set_name: Dawn of Majesty
@@ -96,6 +108,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: OP20-IT003
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Ultimate Rare
   pt:
   - set_number: DAMA-PT006
     set_name: Dawn of Majesty
@@ -109,6 +125,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: OP20-IT003
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Ultimate Rare
   ja:
   - set_number: DAMA-JP006
     set_name: Dawn of Majesty
