--- a/data/cards/68250822.yaml
+++ b/data/cards/68250822.yaml
@@ -15,10 +15,10 @@ name:
   zh-CN: 雷光妖灵双交叉
 text:
   en: |-
-    Target 1 monster on the field or in either GY to activate 1 of these effects;
-    ● Attach it to your Rank 2 monster as material.
-    ● If your opponent controls it, place it in your zone your Link-2 monster points to and take control of it.
-    ● If it is in the GY, Special Summon it to your zone your Link-2 monster points to.
+    Target 1 monster on the field or in either GY, then activate 1 of these appropriate effects;
+    ● Attach the targeted monster to 1 Rank 2 monster you control as material.
+    ● Place the targeted monster your opponent controls in your zone your Link-2 monster points to, and take control of it.
+    ● Special Summon the targeted monster from either GY to your zone your Link-2 monster points to.
     You can only activate 1 "Spright Double Cross" per turn.
   de:
   es:
@@ -39,6 +39,31 @@ property: Normal
 series:
 - Spright
 sets:
+  en:
+  - set_number: DABL-EN074
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  de:
+  - set_number: DABL-DE074
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: DABL-FR074
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  it:
+  - set_number: DABL-IT074
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: DABL-PT074
+    set_name: Darkwing Blast
+    rarities:
+    - Super Rare
   ja:
   - set_number: DABL-JP074
     set_name: Darkwing Blast
