--- a/data/cards/68353324.yaml
+++ b/data/cards/68353324.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Common
+  - set_number: OP20-EN006
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   de:
   - set_number: CIBR-DE040
     set_name: Circuit Break
@@ -68,6 +72,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Common
+  - set_number: OP20-DE006
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   fr:
   - set_number: CIBR-FR040
     set_name: Circuit Break
@@ -81,6 +89,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Common
+  - set_number: OP20-FR006
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   it:
   - set_number: CIBR-IT040
     set_name: Circuit Break
@@ -94,6 +106,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Common
+  - set_number: OP20-IT006
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   pt:
   - set_number: CIBR-PT040
     set_name: Circuit Break
@@ -107,6 +123,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Common
+  - set_number: OP20-PT006
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   ja:
   - set_number: CIBR-JP040
     set_name: Circuit Break
