--- a/data/cards/03734202.yaml
+++ b/data/cards/03734202.yaml
@@ -58,26 +58,46 @@ sets:
     set_name: The New Challengers
     rarities:
     - Rare
+  - set_number: OP20-EN025
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   de:
   - set_number: NECH-DE076
     set_name: The New Challengers
     rarities:
     - Rare
+  - set_number: OP20-DE025
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   fr:
   - set_number: NECH-FR076
     set_name: The New Challengers
     rarities:
     - Rare
+  - set_number: OP20-FR025
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   it:
   - set_number: NECH-IT076
     set_name: The New Challengers
     rarities:
     - Rare
+  - set_number: OP20-IT025
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   pt:
   - set_number: NECH-PT076
     set_name: The New Challengers
     rarities:
     - Rare
+  - set_number: OP20-PT025
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: NECH-JP076
     set_name: The New Challengers
