--- a/data/cards/12160911.yaml
+++ b/data/cards/12160911.yaml
@@ -49,6 +49,10 @@ sets:
     set_name: 'Turbo Pack: Booster Eight'
     rarities:
     - Common
+  - set_number: OP20-EN013
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   - set_number: AST-074
     set_name: Ancient Sanctuary
     rarities:
@@ -66,6 +70,10 @@ sets:
     set_name: 'Turbo Pack: Booster Eight'
     rarities:
     - Common
+  - set_number: OP20-DE013
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   fr:
   - set_number: AST-FR074
     set_name: Ancient Sanctuary
@@ -77,6 +85,10 @@ sets:
     - Common
   - set_number: TU08-FR013
     set_name: 'Turbo Pack: Booster Eight'
+    rarities:
+    - Common
+  - set_number: OP20-FR013
+    set_name: OTS Tournament Pack 20
     rarities:
     - Common
   it:
@@ -92,11 +104,19 @@ sets:
     set_name: 'Turbo Pack: Booster Eight'
     rarities:
     - Common
+  - set_number: OP20-IT013
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   pt:
   - set_number: AST-PT074
     set_name: Ancient Sanctuary
     rarities:
     - Short Print
+  - set_number: OP20-PT013
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: 309-019
     set_name: Pharaoh's Inheritance
