--- a/data/cards/21044178.yaml
+++ b/data/cards/21044178.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: OTS Tournament Pack 13
     rarities:
     - Ultimate Rare
+  - set_number: OP20-EN020
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   de:
   - set_number: ABYR-DE084
     set_name: Abyss Rising
@@ -94,6 +98,10 @@ sets:
     set_name: OTS Tournament Pack 13
     rarities:
     - Ultimate Rare
+  - set_number: OP20-DE020
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   fr:
   - set_number: ABYR-FR084
     set_name: Abyss Rising
@@ -115,6 +123,10 @@ sets:
     set_name: OTS Tournament Pack 13
     rarities:
     - Ultimate Rare
+  - set_number: OP20-FR020
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   it:
   - set_number: ABYR-IT084
     set_name: Abyss Rising
@@ -136,6 +148,10 @@ sets:
     set_name: OTS Tournament Pack 13
     rarities:
     - Ultimate Rare
+  - set_number: OP20-IT020
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   pt:
   - set_number: THSF-PT047
     set_name: The Secret Forces
@@ -153,6 +169,10 @@ sets:
     set_name: OTS Tournament Pack 13
     rarities:
     - Ultimate Rare
+  - set_number: OP20-PT020
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: EP13-JP025
     set_name: 'Extra Pack: Sword of Knights'
