--- a/data/cards/24694698.yaml
+++ b/data/cards/24694698.yaml
@@ -47,9 +47,17 @@ sets:
     set_name: Photon Shockwave
     rarities:
     - Common
+  - set_number: OP20-EN015
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   de:
   - set_number: PHSW-DE029
     set_name: Photon Shockwave
+    rarities:
+    - Common
+  - set_number: OP20-DE015
+    set_name: OTS Tournament Pack 20
     rarities:
     - Common
   fr:
@@ -57,14 +65,26 @@ sets:
     set_name: Photon Shockwave
     rarities:
     - Common
+  - set_number: OP20-FR015
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   it:
   - set_number: PHSW-IT029
     set_name: Photon Shockwave
     rarities:
     - Common
+  - set_number: OP20-IT015
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   pt:
   - set_number: OP18-PT032
     set_name: OTS Tournament Pack 18
+    rarities:
+    - Common
+  - set_number: OP20-PT015
+    set_name: OTS Tournament Pack 20
     rarities:
     - Common
   ja:
