--- a/data/cards/26232916.yaml
+++ b/data/cards/26232916.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: Shadows in Valhalla
     rarities:
     - Secret Rare
+  - set_number: OP20-EN021
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   de:
   - set_number: SHVA-DE014
     set_name: Shadows in Valhalla
     rarities:
     - Secret Rare
+  - set_number: OP20-DE021
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   fr:
   - set_number: SHVA-FR014
     set_name: Shadows in Valhalla
     rarities:
     - Secret Rare
+  - set_number: OP20-FR021
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   it:
   - set_number: SHVA-IT014
     set_name: Shadows in Valhalla
     rarities:
     - Secret Rare
+  - set_number: OP20-IT021
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   pt:
   - set_number: SHVA-PT014
     set_name: Shadows in Valhalla
     rarities:
     - Secret Rare
+  - set_number: OP20-PT021
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: EP19-JP056
     set_name: Extra Pack 2019
