--- a/data/cards/50766506.yaml
+++ b/data/cards/50766506.yaml
@@ -42,21 +42,42 @@ sets:
     set_name: Order of Chaos
     rarities:
     - Rare
+  - set_number: OP20-EN023
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   de:
   - set_number: ORCS-DE089
     set_name: Order of Chaos
     rarities:
     - Rare
+  - set_number: OP20-DE023
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   fr:
   - set_number: ORCS-FR089
     set_name: Order of Chaos
     rarities:
     - Rare
+  - set_number: OP20-FR023
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   it:
   - set_number: ORCS-IT089
     set_name: Order of Chaos
     rarities:
     - Rare
+  - set_number: OP20-IT023
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
+  pt:
+  - set_number: OP20-PT023
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: EP12-JP040
     set_name: Extra Pack 2012
