--- a/data/cards/73445448.yaml
+++ b/data/cards/73445448.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: 'Raging Tempest: Special Edition'
     rarities:
     - Super Rare
+  - set_number: OP20-EN019
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   - set_number: YZ03-EN001
     set_name: Yu-Gi-Oh! ZEXAL Volume 3 promotional card
     rarities:
@@ -66,21 +70,37 @@ sets:
     set_name: 'Raging Tempest: Special Edition'
     rarities:
     - Super Rare
+  - set_number: OP20-DE019
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   fr:
   - set_number: RATE-FRSE1
     set_name: 'Raging Tempest: Special Edition'
     rarities:
     - Super Rare
+  - set_number: OP20-FR019
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   it:
   - set_number: RATE-ITSE1
     set_name: 'Raging Tempest: Special Edition'
     rarities:
     - Super Rare
+  - set_number: OP20-IT019
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   pt:
   - set_number: RATE-PTSE1
     set_name: 'Raging Tempest: Special Edition'
     rarities:
     - Super Rare
+  - set_number: OP20-PT019
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: YZ03-JP001
     set_name: Yu-Gi-Oh! ZEXAL Volume 3 promotional card
