--- a/data/cards/76913983.yaml
+++ b/data/cards/76913983.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP20-EN018
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   de:
   - set_number: RGBT-DE041
     set_name: Raging Battle
@@ -96,6 +100,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP20-DE018
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   fr:
   - set_number: RGBT-FR041
     set_name: Raging Battle
@@ -117,6 +125,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP20-FR018
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   it:
   - set_number: RGBT-IT041
     set_name: Raging Battle
@@ -138,6 +150,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP20-IT018
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   pt:
   - set_number: PGLD-PT078
     set_name: Premium Gold
@@ -147,6 +163,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP20-PT018
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: RGBT-JP041
     set_name: Raging Battle
