--- a/data/cards/79324191.yaml
+++ b/data/cards/79324191.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: OTS Tournament Pack 8
     rarities:
     - Common
+  - set_number: OP20-EN011
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   de:
   - set_number: TDIL-DE081
     set_name: The Dark Illusion
@@ -64,6 +68,10 @@ sets:
     set_name: OTS Tournament Pack 8
     rarities:
     - Common
+  - set_number: OP20-DE011
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   fr:
   - set_number: TDIL-FR081
     set_name: The Dark Illusion
@@ -77,6 +85,10 @@ sets:
     set_name: OTS Tournament Pack 8
     rarities:
     - Common
+  - set_number: OP20-FR011
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   it:
   - set_number: TDIL-IT081
     set_name: The Dark Illusion
@@ -90,6 +102,10 @@ sets:
     set_name: OTS Tournament Pack 8
     rarities:
     - Common
+  - set_number: OP20-IT011
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   pt:
   - set_number: TDIL-PT081
     set_name: The Dark Illusion
@@ -103,6 +119,10 @@ sets:
     set_name: OTS Tournament Pack 8
     rarities:
     - Common
+  - set_number: OP20-PT011
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   ja:
   - set_number: EP17-JP045
     set_name: Extra Pack 2017
