--- a/data/cards/95027497.yaml
+++ b/data/cards/95027497.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: Shadows in Valhalla
     rarities:
     - Super Rare
+  - set_number: OP20-EN016
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   de:
   - set_number: ORCS-DE029
     set_name: Order of Chaos
@@ -70,6 +74,10 @@ sets:
     set_name: Shadows in Valhalla
     rarities:
     - Super Rare
+  - set_number: OP20-DE016
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   fr:
   - set_number: ORCS-FR029
     set_name: Order of Chaos
@@ -84,6 +92,10 @@ sets:
     set_name: Shadows in Valhalla
     rarities:
     - Super Rare
+  - set_number: OP20-FR016
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   it:
   - set_number: ORCS-IT029
     set_name: Order of Chaos
@@ -98,11 +110,19 @@ sets:
     set_name: Shadows in Valhalla
     rarities:
     - Super Rare
+  - set_number: OP20-IT016
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   pt:
   - set_number: SHVA-PT022
     set_name: Shadows in Valhalla
     rarities:
     - Super Rare
+  - set_number: OP20-PT016
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: ORCS-JP029
     set_name: Order of Chaos
