--- a/data/cards/yugipedia903522.yaml
+++ b/data/cards/yugipedia903522.yaml
@@ -42,9 +42,15 @@ sets:
   - set_number: PHHY-JP031
     set_name: Photon Hypernova
     rarities:
+    - SR
+    - ScR
+    - PScR
+  - set_number: PHHY-JP031
+    set_name: Photon Hypernova +1 Bonus Pack
+    rarities:
+    - SR
+    - PScR
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 903522
-fake_password:
-- 101111031
