--- a/data/cards/37260946.yaml
+++ b/data/cards/37260946.yaml
@@ -57,26 +57,46 @@ sets:
     set_name: Power of the Elements
     rarities:
     - Common
+  - set_number: OP20-EN009
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   de:
   - set_number: POTE-DE096
     set_name: Power of the Elements
     rarities:
     - Common
+  - set_number: OP20-DE009
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   fr:
   - set_number: POTE-FR096
     set_name: Power of the Elements
     rarities:
     - Common
+  - set_number: OP20-FR009
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   it:
   - set_number: POTE-IT096
     set_name: Power of the Elements
     rarities:
     - Common
+  - set_number: OP20-IT009
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   pt:
   - set_number: POTE-PT096
     set_name: Power of the Elements
     rarities:
     - Common
+  - set_number: OP20-PT009
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   ja:
   - set_number: DP27-JP004
     set_name: 'Duelist Pack: Duelists of Pyroxene'
