--- a/data/cards/37354507.yaml
+++ b/data/cards/37354507.yaml
@@ -58,26 +58,46 @@ sets:
     set_name: Shadows in Valhalla
     rarities:
     - Secret Rare
+  - set_number: OP20-EN010
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   de:
   - set_number: SHVA-DE011
     set_name: Shadows in Valhalla
     rarities:
     - Secret Rare
+  - set_number: OP20-DE010
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   fr:
   - set_number: SHVA-FR011
     set_name: Shadows in Valhalla
     rarities:
     - Secret Rare
+  - set_number: OP20-FR010
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   it:
   - set_number: SHVA-IT011
     set_name: Shadows in Valhalla
     rarities:
     - Secret Rare
+  - set_number: OP20-IT010
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   pt:
   - set_number: SHVA-PT011
     set_name: Shadows in Valhalla
     rarities:
     - Secret Rare
+  - set_number: OP20-PT010
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   ja:
   - set_number: EP19-JP055
     set_name: Extra Pack 2019
