--- a/data/cards/52296675.yaml
+++ b/data/cards/52296675.yaml
@@ -74,6 +74,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
+  - set_number: OP20-EN007
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   de:
   - set_number: LIOV-DE026
     set_name: Lightning Overdrive
@@ -83,6 +87,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
+  - set_number: OP20-DE007
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   fr:
   - set_number: LIOV-FR026
     set_name: Lightning Overdrive
@@ -92,6 +100,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
+  - set_number: OP20-FR007
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   it:
   - set_number: LIOV-IT026
     set_name: Lightning Overdrive
@@ -101,6 +113,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
+  - set_number: OP20-IT007
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   pt:
   - set_number: LIOV-PT026
     set_name: Lightning Overdrive
@@ -110,6 +126,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
+  - set_number: OP20-PT007
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   ja:
   - set_number: LIOV-JP026
     set_name: Lightning Overdrive
