--- a/data/cards/64487132.yaml
+++ b/data/cards/64487132.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Power of the Elements
     rarities:
     - Common
+  - set_number: OP20-EN008
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   de:
   - set_number: POTE-DE094
     set_name: Power of the Elements
     rarities:
     - Common
+  - set_number: OP20-DE008
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   fr:
   - set_number: POTE-FR094
     set_name: Power of the Elements
     rarities:
     - Common
+  - set_number: OP20-FR008
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   it:
   - set_number: POTE-IT094
     set_name: Power of the Elements
     rarities:
     - Common
+  - set_number: OP20-IT008
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   pt:
   - set_number: POTE-PT094
     set_name: Power of the Elements
     rarities:
     - Common
+  - set_number: OP20-PT008
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   ja:
   - set_number: DP27-JP003
     set_name: 'Duelist Pack: Duelists of Pyroxene'
