--- a/data/cards/73534250.yaml
+++ b/data/cards/73534250.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP20-EN017
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   de:
   - set_number: TDIL-DE012
     set_name: The Dark Illusion
@@ -58,6 +62,10 @@ sets:
     - Common
   - set_number: MP17-DE067
     set_name: 2017 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: OP20-DE017
+    set_name: OTS Tournament Pack 20
     rarities:
     - Common
   fr:
@@ -69,6 +77,10 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP20-FR017
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   it:
   - set_number: TDIL-IT012
     set_name: The Dark Illusion
@@ -78,6 +90,10 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP20-IT017
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   pt:
   - set_number: TDIL-PT012
     set_name: The Dark Illusion
@@ -85,6 +101,10 @@ sets:
     - Common
   - set_number: MP17-PT067
     set_name: 2017 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: OP20-PT017
+    set_name: OTS Tournament Pack 20
     rarities:
     - Common
   ja:
