--- a/data/cards/79109599.yaml
+++ b/data/cards/79109599.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: Fusion Enforcers
     rarities:
     - Super Rare
+  - set_number: OP20-EN014
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   - set_number: AST-082
     set_name: Ancient Sanctuary
     rarities:
@@ -92,6 +96,10 @@ sets:
     set_name: Fusion Enforcers
     rarities:
     - Super Rare
+  - set_number: OP20-DE014
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   fr:
   - set_number: AST-FR082
     set_name: Ancient Sanctuary
@@ -113,6 +121,10 @@ sets:
     set_name: Fusion Enforcers
     rarities:
     - Super Rare
+  - set_number: OP20-FR014
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   it:
   - set_number: AST-IT082
     set_name: Ancient Sanctuary
@@ -134,6 +146,10 @@ sets:
     set_name: Fusion Enforcers
     rarities:
     - Super Rare
+  - set_number: OP20-IT014
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   pt:
   - set_number: AST-PT082
     set_name: Ancient Sanctuary
@@ -147,6 +163,10 @@ sets:
     set_name: Fusion Enforcers
     rarities:
     - Super Rare
+  - set_number: OP20-PT014
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Common
   ja:
   - set_number: 309-027
     set_name: Pharaoh's Inheritance
