--- a/data/cards/82197831.yaml
+++ b/data/cards/82197831.yaml
@@ -12,7 +12,7 @@ name:
   ko: 맥진장갑 라이노세이버
   ko_rr: Maekjinjanggap Rainoseibeo
   zh-TW:
-  zh-CN: 蓦进装甲 剑角犀牛
+  zh-CN: 蓦进装甲 犀牛军刀
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -40,10 +40,8 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패를 임의의 매수 버리고 발동할 수 있다. 이 카드의 공격력은 버린 수 × 700 올린다. ②: 이 카드가 전투를 실행한 배틀 페이즈 종료시에, 이 카드를 묘지로 보내고 발동할 수 있다. 레벨의 합계가 7 이 되도록, 자신 묘지에서 "맥진장갑 라이노세이버" 이외의 몬스터를 고르고 특수 소환한다. 이 효과로 특수 소환한 몬스터의 효과는 무효화된다.
   zh-TW:
   zh-CN: |-
-    调整＋调整以外的怪兽1只以上
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：把手卡任意数量丢弃才能发动。这张卡的攻击力上升丢弃数量×700。
-    ②：这张卡进行战斗的战斗阶段结束时，把这张卡送去墓地才能发动。等级合计直到变成7星为止，从自己墓地选「蓦进装甲 剑角犀牛」以外的怪兽特殊召唤。这个效果特殊召唤的怪兽的效果无效化。
+    协调＋1只以上协调以外的怪兽
+    此卡名的①②效果1回合仅可各使用1次。①：舍弃任意张数的手牌可以发动。此卡的攻击力上升相当于舍弃数量×700的数值。②：此卡进行过战斗的战斗阶段结束时，将此卡送至墓地可以发动。从自己的墓地挑选等级合计为7的"蓦进装甲 犀牛军刀"以外的怪兽特殊召唤。以此效果特殊召唤的怪兽的效果无效化。
 card_type: Monster
 monster_type_line: Machine / Synchro / Effect
 attribute: FIRE
@@ -111,6 +109,11 @@ sets:
     - Normal Parallel Rare
     - Ultra Rare
     - Secret Rare
+  zh-CN:
+  - set_number: TM01-SC090
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
