--- a/data/cards/83266092.yaml
+++ b/data/cards/83266092.yaml
@@ -47,6 +47,10 @@ sets:
     set_name: OTS Tournament Pack 5
     rarities:
     - Common
+  - set_number: OP20-EN012
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   de:
   - set_number: RGBT-DE078
     set_name: Raging Battle
@@ -57,6 +61,10 @@ sets:
     set_name: OTS Tournament Pack 5
     rarities:
     - Common
+  - set_number: OP20-DE012
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   fr:
   - set_number: RGBT-FR078
     set_name: Raging Battle
@@ -67,6 +75,10 @@ sets:
     set_name: OTS Tournament Pack 5
     rarities:
     - Common
+  - set_number: OP20-FR012
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   it:
   - set_number: RGBT-IT078
     set_name: Raging Battle
@@ -77,11 +89,19 @@ sets:
     set_name: OTS Tournament Pack 5
     rarities:
     - Common
+  - set_number: OP20-IT012
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   pt:
   - set_number: OP05-PT027
     set_name: OTS Tournament Pack 5
     rarities:
     - Common
+  - set_number: OP20-PT012
+    set_name: OTS Tournament Pack 20
+    rarities:
+    - Super Rare
   ja:
   - set_number: RGBT-JP078
     set_name: Raging Battle
