--- a/data/cards/yugipedia903633.yaml
+++ b/data/cards/yugipedia903633.yaml
@@ -56,10 +56,15 @@ sets:
   - set_number: PHHY-JP037
     set_name: Photon Hypernova
     rarities:
-    - Rare
+    - SR
+    - ScR
+    - PScR
+  - set_number: PHHY-JP037
+    set_name: Photon Hypernova +1 Bonus Pack
+    rarities:
+    - SR
+    - PScR
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 903633
-fake_password:
-- 101111037
