--- a/data/cards/yugipedia904578.yaml
+++ b/data/cards/yugipedia904578.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When you activate this card, you can also detach up to 3 materials from monsters you control. Add 1 "Springans" monster from your Deck to your hand, then, if you detached materials at activation, you can Special Summon that many "Springans" monsters from your hand and/or GY. If this card is in your GY: You can target 1 Xyz Monster on the field; detach 1 material from it, and if you do, add this card to your hand. You can only use 1 "Tallyho! Springans!" effect per turn, and only once that turn.
+    (When you activate this card, you can also detach up to 3 materials from monsters you control.) Add 1 "Springans" monster from your Deck to your hand, then, if you detached materials at activation, you can Special Summon that many "Springans" monsters from your hand and/or GY. If this card is in your GY: You can target 1 Xyz Monster on the field; detach 1 material from it, and if you do, add this card to your hand. You can only use 1 "Tallyho! Springans!" effect per turn, and only once that turn.
   de:
   es:
   fr:
